terraform/networking.tf
# -------------------------------------------------------
# VPC
# -------------------------------------------------------

resource "aws_vpc" "etl_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project_name}-${var.environment}-vpc"

    "for-use-with-amazon-emr-managed-policies" = "true"
  }
}


# -------------------------------------------------------
# Public Subnet
# -------------------------------------------------------

resource "aws_subnet" "emr_subnet" {
  vpc_id = aws_vpc.etl_vpc.id

  cidr_block = "10.0.1.0/24"

  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-${var.environment}-emr-subnet"

    "for-use-with-amazon-emr-managed-policies" = "true"
  }
}


# -------------------------------------------------------
# Internet Gateway
# -------------------------------------------------------

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.etl_vpc.id

  tags = {
    Name = "${var.project_name}-${var.environment}-igw"
  }
}


# -------------------------------------------------------
# Route Table
# -------------------------------------------------------

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.etl_vpc.id

  route {
    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-public-rt"
  }
}


resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.emr_subnet.id
  route_table_id = aws_route_table.public.id
}
